Attempt to open multiple docs

--- a/Photometer/Views/MainWindow.xaml
+++ b/Photometer/Views/MainWindow.xaml
@@ -12,6 +12,8 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Grid ColumnDefinitions="*,*,*" RowDefinitions="*,*">
+        <Button Width ="100" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Load files"/>
+    </Grid>
 
 </Window>
