--- a/Photometer/Views/MainWindow.xaml
+++ b/Photometer/Views/MainWindow.xaml
@@ -13,7 +13,7 @@
     </Design.DataContext>
 
     <Grid ColumnDefinitions="*,*,*" RowDefinitions="*,*">
-        <Button Width ="100" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Load files"/>
+        <Button Width ="100" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Load files" Command="{Binding LoadFilesCommand}"/>
     </Grid>
 
 </Window>
